-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.5
-
None
-
45a09474fa9595b2f98a5bac3ce83bd8906523f6
To reproduce:
1) Take any plural translation and translate singular, paucal and plural fields to e.g.: "Singular %n", "Paucal %n" and "Plural %n".
2) Ctrl+F, if you search for "Paucal" or for "Plural" find will not find any matches (bug), while if you search for "Singular" find will discover it.