search in plural forms after all

our search is not fuzzy, so for some languages it makes a lot of sense
to search in the plurals, as they may use different grammatical forms.

Task-number: QTBUG-32218
Change-Id: I9ba2e370f9bcc564e707b2339ab0b1e73935c03d
Reviewed-by: hjk <hjk121@nokiamail.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>